--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_auth: ^3.7.0
   firebase_core: ^1.21.1
   cloud_firestore: ^3.4.7
+  firebase_storage: ^10.3.8
+  file_picker: ^5.0.1
   email_validator: '^2.1.16'
   provider: ^6.0.3
   flutter_svg: ^1.1.1+1
@@ -51,6 +53,8 @@ dependencies:
   google_sign_in: ^5.2.4
   adaptive_theme: ^3.1.1
   json_serializable: ^6.3.1
+  modal_bottom_sheet: ^2.0.1
+  intl: ^0.17.0
 
 
 
