--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,10 @@ dependencies:
   firebase_auth: ^3.7.0
   firebase_core: ^1.21.1
   cloud_firestore: ^3.4.7
+  carousel_slider: ^4.1.1
   firebase_storage: ^10.3.8
   file_picker: ^5.0.1
+  image_picker: ^0.8.5+3
   email_validator: '^2.1.16'
   provider: ^6.0.3
   flutter_svg: ^1.1.1+1
@@ -82,8 +84,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
+    - assets/lotties/
+    - assets/svg/
+    
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
